name:                hello
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
synopsis:            hello - not a simple "print Hello World" problem
homepage:            https://github.com/bumbleblym/hello
author:              Benjamin Lim
maintainer:          bumbleblym@users.noreply.github.com
build-type:          Simple
cabal-version:       >=1.10

executable hello
  main-is:             Main.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  other-extensions:
      DeriveFunctor
    , FlexibleContexts
    , FlexibleInstances
    , FunctionalDependencies
    , LambdaCase
    , MultiParamTypeClasses
    , OverloadedStrings
    , TemplateHaskell
  ghc-options:
      -Wall
      -fno-warn-unused-do-bind
      -fno-warn-name-shadowing
  build-depends:
      base >=4.9 && <4.10
    , free
    , lens
    , megaparsec
    , optparse-applicative
    , text
